test/conformance/chainsaw/validate/clusterpolicy/enforce/enforce-validate-existing/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-labels-validate-existing
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-labels
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        pattern:
          metadata:
            labels:
              =(foo): "bar"
